# creation

./: pyproject.toml  run_simulation.py  setup.py
ecosystem_sim/: README.md  __init__.py  main.py  plant.py  simulation.py  visualization.py  world.py
